feat(recruitment): update condition for recruitment feat